2003-07-28  Sam Steingold  <sds@gnu.org>

	* encoding.d, stream.d, socket.d, misc.d, win32aux.d:
	fixed g++/mingw compilation

2003-07-27  Sam Steingold  <sds@gnu.org>

	* genclisph.d, encoding.d (cstombs_f, cslen_f) [!UNICODE]: macros
	* modules/dirkey/dirkey.c: undef UNICODE before including clisp.h;
	no need for *_encoding without CLISP_UNICODE
	* modules/syscalls/calls.c: define WINVER before including clisp.h;
	no need for *_encoding without CLISP_UNICODE

2003-07-27  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/configure.in: check for signgam
	* modules/syscalls/calls.c (LGAMMA): use the check

2003-07-26  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c, pathname.d (hardlink_file, symlink_file):
	moved from pathname.d to calls.c
	* genclisph.d (Symbol_name, builtin_stream_p): enabled
	fixed the HANDLE problems

2003-07-26  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (CONFIGURES): added config.h.in in wildcard,
	regexp, dirkey and syscall, use autoheader to generate them
	* m4/cc-void.m4 (RL_VOID): fixed the AC_DEFINE call

2003-07-25  Sam Steingold  <sds@gnu.org>

	Converted syscall to a module
	* Makefile.devel (CONFIGURES): added syscalls
	* configure, makemake.in (--with-dir-key): removed option
	* modules/syscalls: new directory
	* genclisph.d: added some stuff to support syscalls
	* constobj.d, constpack.d, constsym.d, pathname.d, socket.d:
	* spvw.d, stream.d, subr.d, subrkw.d: removed syscall-specific stuff
	* pathname.d (if_does_not_exist_symbol, if_exists_symbol): added
	* socket.d (addr_to_string, resolve_host1, resolve_host): added
	* stream.d (file_stream_truename, open_file_stream_handle): added
	* posix.lisp, posixmath.d, posixmisc.d: removed

2003-07-25  Sam Steingold  <sds@gnu.org>

	* modprep.c: DEFUN can specify side-effect-class

2003-07-25  Sam Steingold  <sds@gnu.org>

	* error.d (check_posfixnum): new function
	* io.d (PPRINT-INDENT): use check_real()
	* lisparit.d (fehler_not_N): replaced with check_number()